--- a/package.json
+++ b/package.json
@@ -16,5 +16,22 @@
   "bugs": {
     "url": "https://github.com/puba5/fe-w45-kanbantodo/issues"
   },
-  "homepage": "https://github.com/puba5/fe-w45-kanbantodo#readme"
+  "homepage": "https://github.com/puba5/fe-w45-kanbantodo#readme",
+  "dependencies": {
+    "core-js": "^3.8.2",
+    "webpack-cli": "^4.3.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.1",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.15.0",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
