--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/puba5/fe-w45-kanbantodo#readme",
   "dependencies": {
     "core-js": "^3.8.2",
+    "koa": "^2.13.1",
+    "koa-router": "^10.0.0",
+    "koa-static": "^5.0.0",
     "webpack-cli": "^4.3.1"
   },
   "devDependencies": {
