chore : API 서버를 구동 설정 추가
- API 서버를 구동하는 설정 추가
- koa-static으로 라우팅 설정 및 "npm run api-server"하면 화면에 그려지도록 설정

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## 할 일 / 한 일",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "api-server": "nodemon main"
   },
   "repository": {
     "type": "git",
