--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-boilerplate",
+  "name": "fe-w45-kanbantodo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
