--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open --config webpack.dev.js",
+    "dev": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "watch": "webpack --watch",
-    "dev": "webpack serve"
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
