--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/puba5/fe-w45-kanbantodo#readme",
   "dependencies": {
     "core-js": "^3.8.2",
+    "dotenv": "^8.2.0",
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
