feat : mongoose 설치 및 atlas에 있는 Mongo DB와 연결
- mongoose 패키지 설치
- altas에 만든 Mongo DB 클러스터와 연결

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa": "^2.13.1",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
+    "mongoose": "^5.11.13",
     "webpack-cli": "^4.3.1"
   },
   "devDependencies": {
