Add listview layout 리스트뷰를 요구사항에 맞게 꾸미고 구현에 용이하도록 임시 구분해 두었습니다.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## 주요 기능 * 팝업 레이어 (최근 본 상품) * 무한 슬라이딩 UI (홈 > 프로모션) * 반응형 슬라이딩 UI (기획서 홈 > 패션)",
   "main": "app.js",
   "scripts": {
+    "start": "json-server --watch db.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
