--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-middleware": "^4.1.0",
