--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/ChanhuiSeok/fe-w23-shoppinghow#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.8.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
