--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "core-js": "^3.8.3",
     "express": "^4.17.1",
+    "mongoose": "^5.11.13",
     "webpack": "^5.15.0"
   },
   "devDependencies": {
