--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack serve --open"
+    "start": "json-server --watch db.json --port 5000 & webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "json-server": "^0.16.3",
     "mini-css-extract-plugin": "^1.3.4",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
