--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,12 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "json-server": "^0.16.3"
+    "@babel/preset-env": "^7.12.11"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "lowdb": "^1.0.0"
   }
 }
