bugfix : 새 카드 추가 시 모달 간섭 수정 새로운 카드 추가 시 다른 것도 변경되는 오류를 수정하였습니다.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./server/newserver.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --open --config webpack.dev.js",
+    "dev": "webpack serve --watch --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch"
   },
