--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
     "sass": "^1.32.4",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "typescript": "^4.1.3",
     "webpack": "^5.15.0",
     "webpack-dev-server": "^3.11.2"
   }
