--- a/babel.config.json
+++ b/babel.config.json
@@ -6,10 +6,11 @@
              "targets" : "> 0.25%, not dead",
              "useBuiltIns" : "usage",
              "corejs" : {"version": 3, "proposals": true }
-            }
+            },"@babel/preset-typescript"
         ]
+
     ],
     "plugins": [ 
-        ["@babel/plugin-proposal-class-properties", { "loose": true }]
+        ["@babel/plugin-proposal-class-properties", { "loose": true }]   
     ]
 }
