--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/node": "^14.14.21",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.1",
     "nodemon": "^2.0.7",
     "sass": "^1.32.4",
+    "typescript": "^4.1.3",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
   }
