--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.1",
     "image-webpack-loader": "^7.0.1",
-    "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
   },
   "devDependencies": {
@@ -37,8 +36,11 @@
     "file-loader": "^6.2.0",
     "json-server": "^0.16.3",
     "mini-css-extract-plugin": "^1.3.4",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
+    "webpack": "^5.15.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
