--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
@@ -39,6 +40,7 @@
     "sass": "^1.32.6",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.15.0",
     "webpack-dev-server": "^3.11.2"
