--- a/babel.config.json
+++ b/babel.config.json
@@ -6,8 +6,8 @@
              "targets" : "> 0.25%, not dead",
              "useBuiltIns" : "usage",
              "corejs" : {"version": 3, "proposals": true }
-            },"@babel/preset-typescript"
-        ]
+            }
+        ],"@babel/preset-typescript"
 
     ],
     "plugins": [ 
