--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-methods": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.4",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
