--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "core-js": "^3.8.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "mongoose": "^5.11.13",
