--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.13",
     "webpack-cli": "^4.3.1"
   },
