--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "node server.js & webpack serve --open"
+    "start": "webpack serve --open & node server.js"
   },
   "repository": {
     "type": "git",
