--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
     "json-server": "^0.16.3",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.3",
